<resources>
    <string name="app_name">ClickCycles</string>
    <string name="login_button_text">Log in</string>
    <string name="title_location_permission">Allow Location access</string>
    <string name="message_location_permission">We need your location to get you your nearest customers. Please grant the permission for the same</string>
    <string name="ok">OK</string>
    <string name="login_text">Login / Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="sign_up_error">Error in signing up. Please try again</string>
    <string name="sign_in_error">Error in signing in. Please try again</string>
    <string name="title_activity_map">Map</string>
    <string name="getting_location">Getting your location</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_photo_update_success">Sucessfully updated Profile Photo</string>
    <string name="profile_photo_update_failure">Failed to update Profile Photo</string>
</resources>